# Authentication

./: CMakeLists.txt  FRONTEND_SECURITY_DISPLAY_GUIDE.md  IDS_gateway_server.py  README.md  SECURITY_INTERFACE_README.md  aead_all.cpp  aead_terminal.cpp  algorithm_security_output_example.json  auth_api.cpp  auth_api.h  auth_client.cpp  auth_client_ipv6.py  authenticator.cpp  client.cpp  count_lines.py  example_usage.cpp  key_vault.cpp  key_vault.h  last_reauth_signal.pcap  libauth.cpp  libauth.h  make_payload.cpp  payload_samples.txt  re_auth_response.pcap  self_vertify.cpp  step1_initial.pcap  test_payload_input.cpp  test_tool_repro  北邮接口要求 .docx
